MT-631: Many changes to fix broken layouts

--- a/sugarcrm/styleguide/less/clients/sugarone/sugarone-specific/forms.less
+++ b/sugarcrm/styleguide/less/clients/sugarone/sugarone-specific/forms.less
@@ -680,3 +680,7 @@ input[type="color"],
     border: none;
   }
 }
+
+.btn-group + .btn-group {
+  margin-left: 4px;
+}
