--- a/sugarcrm/styleguide/less/clients/sugarone/sugarone-specific/globalsearch.less
+++ b/sugarcrm/styleguide/less/clients/sugarone/sugarone-specific/globalsearch.less
@@ -2,9 +2,9 @@
   position: relative;
   float: left;
   display: inline-block;
-  width: ~"-moz-calc(100% - 188px)";
-  width: ~"-webkit-calc(100% - 188px)";
-  width: ~"calc(100% - 188px)";
+  width: ~"-moz-calc(100% - 208px)";
+  width: ~"-webkit-calc(100% - 208px)";
+  width: ~"calc(100% - 208px)";
 
   .btn {
     margin-right: 0;
