--- a/sugarcrm/styleguide/less/clients/sugarone/sugarone-specific/navbar.less
+++ b/sugarcrm/styleguide/less/clients/sugarone/sugarone-specific/navbar.less
@@ -1,11 +1,4 @@
-.btn-navbar {
-  @shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(255,255,255,.075);
-  .box-shadow(@shadow);
-  .icon-bar {
-    background-color: #f5f5f5;
-    .box-shadow(0 1px 0 rgba(0,0,0,.25));
-  }
-}
+
 
 [data-module="Home"] > .btn-group > .dropdown-toggle {margin-right: 40px;}
 
@@ -29,12 +22,18 @@
     .box-sizing(border-box);
     padding: 4px 10px;
     width: 100%;
-    height: 28px; // Due to `border-box`.
+    height: 28px;
     line-height: @baseLineHeight;
     background: @white;
     .border-radius(2px);
-    color: @grayDark; // [moey] Made it identical to when `:focus`.
+    color: @grayDark;
     .placeholder(@grayLight);
+  }
+  .btn i, a.advanced {
+    color: @grayLighter;
+  }
+  .btn:hover i, #accordian #toggle:hover, a.advanced:hover i {
+    color: @gray !important;
   }
 }
 
@@ -66,20 +65,7 @@
   .brand {
     color: @white;
   }
-  // Plain text in topbar
-  .navbar-text {
-    a:hover {
-      color: @white;
-      background: red !important;
-    }
-  }
-  a [class^="icon-"] {
-    color: @white;
-    font-size: 14px;
-  }
-  a:hover .icon-favorite {
-    color: @yellow_favorite !important;
-  }
+
   // fix red message button position
   .dropdown .btn {
     margin-top: 8px;
@@ -147,11 +133,6 @@
     }
     .btn-group {
       margin: 0;
-      a.advanced {
-        .icon-caret-down {
-          color: @grayLight;
-        }
-      }
     }
   }
   .divider-vertical {
@@ -328,19 +309,9 @@
             }
           }
           &#createList {
-            width: 40px;
             border-right: none;
             &> div {
               width: 100%;
-              &> a {
-                width: 28px;
-                padding: 5px 2px;
-                &:hover {
-                  i {
-                    color: @white !important;
-                  }
-                }
-              }
             }
           }
           #notificationDrop {
@@ -361,6 +332,18 @@
       }
     }
 
+    #createList {
+      .dropdown-toggle {
+        width: 26px;
+        padding: 6px 8px 6px 4px;
+        &:hover {
+          i {
+          color: @white !important;
+          }
+        }
+      }
+    }
+
     // Dropdown toggle caret
     li.dropdown > .dropdown-toggle .caret,
     .open.dropdown .caret {
@@ -372,13 +355,11 @@
     .active > a,
     .active > a:hover {
       text-decoration: none;
-      color: @navbarLinkColorActive;
-      text-shadow: 0 -1px 0 rgb(0,0,0);
     }
 
     .active > a,
     .active > a:hover {
-      padding-bottom: 13px;
+      color: @black;
       font-weight: bold;
     }
 
@@ -394,11 +375,9 @@
   .avatar {
     margin: 4px 4px 4px 0;
     float: left;
-    .border-radius(3px);
+    .border-radius(2px);
     height: 26px;
     width: 26px;
-    @shadow: 1px 1px 0 rgba(0,0,0,.6), -1px -1px 0 rgba(0,0,0,.6);
-    .box-shadow(@shadow);
   }
   .icon-user {
     margin: 0 7px 0 6px;
@@ -462,4 +441,8 @@
 
 .moreLink.hide {
   display: none;
+}
+
+.quickcreate {
+    text-indent: 26px;
 }
